# lca-baselines

./: .gitignore  LICENSE  README.md  chatgpt.py  llama2_models.py  metrics.py
ci-builds-repair/ci-builds-repair-benchmark/: README.md  benchmark.py  benchmark_utils.py  benhmark_functions.py  config_template.yaml  filter_dps.py  packages_version_before_Jan24.txt  pyproject.toml  recalc_results.py  requirements.txt  run_benchmark.py  tokens_paths.yaml  work_with_workflows.py
ci-builds-repair/ci-builds-repair-benchmark/examples/: jobs_awaiting.jsonl  jobs_ids.jsonl  jobs_invalid.jsonl
code_generation/: pyproject.toml
code_generation/results/bm25/gpt-3.5-turbo-0125/: 108.py  109.py  12.py  122.py  126.py  127.py  131.py  142.py  27.py  32.py  44.py  61.py  67.py  77.py  88.py
code_generation/results/bm25/gpt-4-0125-preview/: 1.py  115.py  141.py  142.py  143.py  15.py  16.py  2.py  24.py  31.py  34.py  35.py  42.py  44.py  52.py  54.py  72.py  76.py  9.py  96.py  99.py
code_generation/results/codellama/CodeLlama-70b-Instruct-hf/: 1.py  12.py  131.py  133.py  135.py  21.py  32.py  38.py  39.py  42.py  44.py  49.py  53.py  7.py  74.py  82.py  85.py  86.py
code_generation/results/codellama/CodeLlama-7b-Instruct-hf/: 105.py  106.py  108.py  110.py  115.py  120.py  121.py  123.py  16.py  21.py  26.py  33.py  5.py  55.py  73.py  74.py  79.py  82.py  9.py  93.py
code_generation/results/gpt-3.5-turbo-0125/: 0.py  103.py  104.py  108.py  114.py  116.py  118.py  146.py  19.py  37.py  39.py  47.py  52.py  60.py  68.py  71.py  72.py  73.py  8.py  92.py  96.py  99.py
code_generation/results/gpt-4-0125-preview/: 0.py  101.py  121.py  128.py  132.py  142.py  149.py  24.py  25.py  41.py  51.py  52.py  56.py  57.py  60.py  66.py  88.py  98.py  99.py
code_generation/results/mistralai/Mistral-7B-Instruct-v0.3/: 102.py  111.py  113.py  116.py  123.py  124.py  130.py  131.py  135.py  138.py  145.py  16.py  27.py  33.py  38.py  39.py  44.py  59.py  61.py  72.py  74.py  79.py  82.py  87.py  9.py  96.py
code_generation/results/mistralai/Mixtral-8x7B-Instruct-v0.1/: 100.py  11.py  113.py  114.py  120.py  122.py  125.py  139.py  141.py  147.py  18.py  24.py  33.py  57.py  58.py  77.py  metadata.json
code_generation/src/context/: parsed_file.py
code_generation/src/evaluation/: evaluate.py
code_generation/src/metrics/: overlap.py
code_generation/src/models/: example_generation_model.py  together_model.py  utils.py
commit_message_generation/: Makefile  README.md  arun_baseline.py  pyproject.toml  requirements.txt  run_baseline.py  run_preprocessor.py
commit_message_generation/configs/: __init__.py  backbones_configs.py  baseline_config.py  data_sources_configs.py  preprocessor_configs.py  prompts_configs.py  utils.py
commit_message_generation/configs/async/: DeepSeek-R1.yaml  DeepSeek-V3-16k-files.yaml  DeepSeek-V3-16k.yaml  DeepSeek-V3-32k.yaml  DeepSeek-V3-4k-files.yaml  DeepSeek-V3-4k.yaml  DeepSeek-V3-64k.yaml  DeepSeek-V3-8k-files.yaml  DeepSeek-V3-8k.yaml  DeepSeek-V3.yaml  Llama-3.1-405B-Instruct-Turbo.yaml  Llama-3.1-70B-Instruct-Turbo.yaml  Llama-3.1-8B-Instruct-Turbo.yaml  Llama-3.2-3B-Instruct-Turbo.yaml  Llama-3.3-70B-Instruct-Turbo.yaml  QwQ-32B-Preview.yaml  Qwen2.5-Coder-32B-Instruct.yaml  gpt-4o-2024-11-20.yaml  gpt-4o-mini-2024-07-18.yaml  o1-mini-2024-09-12-16k-files.yaml  o1-mini-2024-09-12-16k.yaml  o1-mini-2024-09-12-32k-files.yaml  o1-mini-2024-09-12-4k-files.yaml  o1-mini-2024-09-12-4k.yaml  o1-mini-2024-09-12-64k-files.yaml  o1-mini-2024-09-12-8k-files.yaml  o1-mini-2024-09-12-8k.yaml  o1-mini-2024-09-12.yaml  o1-preview-2024-09-12.yaml
commit_message_generation/configs/examples/: cmg_codet5.yaml  codellama13b.yaml  codellama34b.yaml  codellama_7b.yaml  deepseek-coder-1.3b.yaml  deepseek-coder-33b.yaml  deepseek-coder-6.7b.yaml  gpt-4-1106-preview.yaml  gpt_3.5_16k.yaml  gpt_4.yaml  gpt_4_8k.yaml  mistral_7b.yaml  mixtral_8bit.yaml
commit_message_generation/configs/retrieval/: DeepSeek-V3-files.yaml  DeepSeek-V3-retrieval.yaml
commit_message_generation/notebooks/: cmg_data_stats.ipynb  sample.ipynb
commit_message_generation/src/: __init__.py  baseline.py
commit_message_generation/src/backbones/: __init__.py  base_backbone.py  deepseek_backbone.py  hf_backbone.py  openai_backbone.py  together_backbone.py
commit_message_generation/src/data_sources/: __init__.py  hf.py  local.py
commit_message_generation/src/metrics/: __init__.py  b_norm.py  metrics.py
commit_message_generation/src/metrics/reused_implementations/: b_norm.py
commit_message_generation/src/preprocessors/: __init__.py  base_preprocessor.py  full_files_preprocessor.py  load_from_dataset_preprocessor.py  retrieval_preprocessor.py  simple_diff_preprocessor.py  truncation_diff_preprocessor.py
commit_message_generation/src/prompts/: __init__.py  base_prompt.py  prompts.py
commit_message_generation/src/retrieval/: hf_document_loader.py
commit_message_generation/src/utils/: __init__.py  git_utils.py  tokenization_utils.py  typing_utils.py
module_summarization/: README.md  chatgpt.py  metrics.py  pyproject.toml  togetherai.py
module_summarization/configs/: config_eval.yaml  config_openai.yaml
module_summarization/utils/: api_generation.py  context_utils.py  files_utils.py  scorer.py
project_level_code_completion/: README.md  pyproject.toml
project_level_code_completion/composers/: alphabetical_composer.py  base_composer.py  file_length_composer.py  function_class_mask_one.py  naive_composer.py
project_level_code_completion/data_classes/: datapoint_commit_dataset.py
project_level_code_completion/eval/: eval.py  eval_pipeline.py  line_generators.py  preprocessors.py  utils.py
project_level_code_completion/eval/config/: config.yaml
project_level_code_completion/eval/config/composers_config/: python_standard.yaml
project_level_code_completion/eval/config/dataset/: medium.yaml  small.yaml
project_level_code_completion/model_hub/: model_classes.py  model_inference.py  model_registry.py
project_level_code_completion/tree_sitter_parser/: parsed_file.py
(+1844 files in other folders)
