[tool.poetry]
name = "lca-baselines-cmg"
version = "0.1.0"
description = "Benchmark for Commit Message Generation task as part of Long Code Arena."
authors = [
    "Alexandra Eliseeva <alexandra.eliseeva@jetbrains.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JetBrains-Research/lca-baselines"

[tool.poetry.dependencies]
python = "~3.10"
torch = "2.0.0"
transformers = "^4.31.0"
openai = "^1.3.6"
hydra-core = "^1.3.2"
wandb = "^0.15.8"
datasets = "^2.14.2"
jsonlines = "^3.1.0"
tiktoken = "^0.4.0"
torchmetrics = "^1.2.1"
evaluate = "^0.4.1"
bert-score = "^0.3.13"
sacrebleu = "^2.3.1"
rouge-score = "^0.1.2"
bitsandbytes = "^0.41.2"
accelerate = "^0.23.0"
optimum = "^1.14.1"
scipy = "^1.11.4"
backoff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.7.0"}
isort = "^5.12.0"
mypy = "^1.5.0"
pytest = "^7.4.0"

[tool.poetry.group.eda.dependencies]
jupyter = "^1.0.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
plotly = "^5.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
line_length = 120
py_version = 310
profile = "black"

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true