[tool.poetry]
name = "lca"
version = "0.1.0"
description = "[WIP] Benchmarking code models"
authors = [
    "Egor Bogomolov <egor.bogomolov@jetbrains.com>",
    "Maria Tigina <maria.tigina@jetbrains.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JetBrains-Research/lca"

[tool.poetry.dependencies]
python = "~3.10"
black = {extras = ["jupyter"], version = "^23.7.0"}
isort = "^5.12.0"
mypy = "^1.5.0"
jupyter = "^1.0.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
aiohttp = "^3.8.5"
tenacity = "^8.2.3"
requests = "^2.31.0"
lxml-stubs = "^0.4.0"
self = "^2020.12.3"
pydriller = "^2.5"
pyyaml = "^6.0.1"
nltk = "^3.8.1"
gensim = "^4.3.1"
scikit-learn = "^1.3.0"
pandas-stubs = "^2.0.3.230814"
types-pyyaml = "^6.0.12.11"
#transformers = "^4.32.0"
accelerate = "*"
#youtokentome = {git = "https://github.com/JetBrains-Research/YouTokenToMe.git"}
torch = "2.0.0"
#accelerate = "^0.22.0"
bitsandbytes = "^0.41.1"
wandb = "^0.15.12"
tiktoken = "0.4.0"
omegaconf = "^2.3.0"
onnxruntime = "^1.16.1"
einops = "^0.7.0"
torchvision = "0.15.1"
opt-einsum = "^3.3.0"
pytorch-lightning = "^2.1.0"
pykeops = "^2.1.2"
scipy = "^1.11.3"
numpy = "^1.26.1"
evaluate = "^0.4.1"
codegen-metrics = "^0.2.0"
thefuzz = "^0.20.0"
colorama = "^0.4.6"
hydra-core = "^1.3.2"
optimum = "^1.14.1"
jsonlines = "^4.0.0"
transformers = "^4.39.3"
datasets = "^2.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
line_length = 120
py_version = 310
profile = "black"

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
